[package]
name = "encryption-macros"
version = "0.1.0"
edition = "2021"
authors = ["Michael van Straten"]
repository = "https://github.com/michaelvanstraten/encryption-macros"
documentation = "https://docs.rs/encryption-macros/"
keywords = ["redis", "serde", "serialization"]
categories = ["encoding"]
readme = "readme.md"
description = "This crate provides macros to xor strings decaritive or automaticly at compiletime and atomaticly decode the at run time."
license = "MIT OR Apache-2.0"

[dependencies]
hex = "0.4.3"
encryption = { path = "./macros/encryption" }
key-generation = { path = "./macros/key-generation" }
utils = { path = "./utils" }